Pushing changes to GitHub Pages.

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -98,7 +98,7 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8erase_ifER4PredRK8key_typeRK9meta_type12cudaStream_t">nv::merlin::HashTable::erase_if (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findE9size_typePK8key_typeP10value_typePbP9meta_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>
 </li>
@@ -110,6 +110,8 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP6KVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable11load_factorE12cudaStream_t">nv::merlin::HashTable::load_factor (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9meta_typeE">nv::merlin::HashTable::meta_type (C++ type)</a>
@@ -119,6 +121,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable7reserveE9size_type12cudaStream_t">nv::merlin::HashTable::reserve (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP6KVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4sizeE12cudaStream_t">nv::merlin::HashTable::size (C++ function)</a>
 </li>
