Pushing changes to GitHub Pages.

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -82,6 +82,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/typedef_merlin__hashtable_8cuh_1a75860344e3d48da549d33c7941686e7e.html#_CPPv4I00EN2nv6merlin14EraseIfPredictE">nv::merlin::EraseIfPredict (C++ type)</a>
 </li>
+      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategyE">nv::merlin::EvictStrategy (C++ enum)</a>
+</li>
+      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategy11kCustomizedE">nv::merlin::EvictStrategy::kCustomized (C++ enumerator)</a>
+</li>
+      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategy4kLruE">nv::merlin::EvictStrategy::kLru (C++ enumerator)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_6size_tEN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_t">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
@@ -116,10 +122,10 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9meta_typeE">nv::merlin::HashTable::meta_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4PredE">nv::merlin::HashTable::Pred (C++ type)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4PredE">nv::merlin::HashTable::Pred (C++ type)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable7reserveE9size_type12cudaStream_t">nv::merlin::HashTable::reserve (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP6KVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
@@ -147,6 +153,8 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions10block_sizeE">nv::merlin::HashTableOptions::block_size (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions9device_idE">nv::merlin::HashTableOptions::device_id (C++ member)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions14evict_strategyE">nv::merlin::HashTableOptions::evict_strategy (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions13init_capacityE">nv::merlin::HashTableOptions::init_capacity (C++ member)</a>
 </li>
