Pushing changes to GitHub Pages.

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -90,7 +90,7 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_6size_tEN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_t">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable8capacityEv">nv::merlin::HashTable::capacity (C++ function)</a>
 </li>
@@ -112,24 +112,24 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initEK16HashTableOptions">nv::merlin::HashTable::init (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignE9size_typePK8key_typePK10value_typePK9meta_type12cudaStream_t">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignE9size_typePK8key_typePK10value_typePK9meta_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP6KVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP10BaseKVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable11load_factorE12cudaStream_t">nv::merlin::HashTable::load_factor (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9meta_typeE">nv::merlin::HashTable::meta_type (C++ type)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4PredE">nv::merlin::HashTable::Pred (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable7reserveE9size_type12cudaStream_t">nv::merlin::HashTable::reserve (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP6KVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP10BaseKVFileI1K1V1M3DIME9size_type12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4sizeE12cudaStream_t">nv::merlin::HashTable::size (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9size_typeE">nv::merlin::HashTable::size_type (C++ type)</a>
@@ -165,6 +165,20 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions19max_hbm_for_vectorsE">nv::merlin::HashTableOptions::max_hbm_for_vectors (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions15max_load_factorE">nv::merlin::HashTableOptions::max_load_factor (C++ member)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4I000_6size_tEN2nv6merlin11LocalKVFileE">nv::merlin::LocalKVFile (C++ class)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFile5closeEv">nv::merlin::LocalKVFile::close (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFile11LocalKVFileEv">nv::merlin::LocalKVFile::LocalKVFile (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFile4openERKNSt6stringERKNSt6stringERKNSt6stringEPKc">nv::merlin::LocalKVFile::open (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFile4readE6size_tP1KP1VP1M">nv::merlin::LocalKVFile::read (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFile5writeE6size_tPK1KPK1VPK1M">nv::merlin::LocalKVFile::write (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1LocalKVFile.html#_CPPv4N2nv6merlin11LocalKVFileD0Ev">nv::merlin::LocalKVFile::~LocalKVFile (C++ function)</a>
 </li>
   </ul></td>
 </tr></table>
