Pushing changes to GitHub Pages.

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -80,7 +80,7 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/typedef_merlin__hashtable_8cuh_1a75860344e3d48da549d33c7941686e7e.html#_CPPv4I00EN2nv6merlin14EraseIfPredictE">nv::merlin::EraseIfPredict (C++ type)</a>
+      <li><a href="api/typedef_merlin__hashtable_8cuh_1a20afe66b4f5d4690391f7ef8845223e5.html#_CPPv4I00EN2nv6merlin14EraseIfPredictE">nv::merlin::EraseIfPredict (C++ type)</a>
 </li>
       <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategyE">nv::merlin::EvictStrategy (C++ enum)</a>
 </li>
@@ -105,6 +105,8 @@
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8erase_ifER4PredRK8key_typeRK9meta_type12cudaStream_t">nv::merlin::HashTable::erase_if (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">[1]</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable15export_batch_ifER4PredRK8key_typeRK9meta_type9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch_if (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findE9size_typePK8key_typeP10value_typePbP9meta_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>
 </li>
@@ -157,6 +159,8 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions14evict_strategyE">nv::merlin::HashTableOptions::evict_strategy (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions13init_capacityE">nv::merlin::HashTableOptions::init_capacity (C++ member)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions9io_by_cpuE">nv::merlin::HashTableOptions::io_by_cpu (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions15max_bucket_sizeE">nv::merlin::HashTableOptions::max_bucket_size (C++ member)</a>
 </li>
