Pushing changes to GitHub Pages.

--- a/master/README.html
+++ b/master/README.html
@@ -437,6 +437,10 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
   </span>
   <div class="rst-other-versions">
     <dl>
+      <dt>Tags</dt>
+      <dd><a href="../v0.1.0-beta.1/index.html">v0.1.0-beta.1</a></dd>
+    </dl>
+    <dl>
       <dt>Branches</dt>
       <dd><a href="README.html">master</a></dd>
     </dl>
