--- a/master/search.html
+++ b/master/search.html
@@ -115,6 +115,10 @@
   </span>
   <div class="rst-other-versions">
     <dl>
+      <dt>Tags</dt>
+      <dd><a href="../v0.1.0-beta.1/index.html">v0.1.0-beta.1</a></dd>
+    </dl>
+    <dl>
       <dt>Branches</dt>
       <dd><a href="search.html">master</a></dd>
     </dl>
