--- a/master/index.html
+++ b/master/index.html
@@ -61,8 +61,8 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="#" class="icon icon-home"></a> &raquo;</li>
-      <li>Merlin Key-Value Storage</li>
+      <li><a href="#" class="icon icon-home"></a></li>
+      <li class="breadcrumb-item active">Merlin Key-Value Storage</li>
       <li class="wy-breadcrumbs-aside">
       </li>
   </ul>
