--- a/review/pr-64/README.html
+++ b/review/pr-64/README.html
@@ -186,40 +186,45 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
 <th class="text-right head"><p>HMEM(GB)</p></th>
 <th class="text-right head"><p>insert</p></th>
 <th class="text-right head"><p>find</p></th>
+<th class="text-right head"><p>erase</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>4</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16</p></td>
+<td class="text-right"><p>32</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>1.167</p></td>
-<td class="text-right"><p>1.750</p></td>
+<td class="text-right"><p>1.118</p></td>
+<td class="text-right"><p>1.478</p></td>
+<td class="text-right"><p>0.482</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>4</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16</p></td>
+<td class="text-right"><p>32</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.897</p></td>
-<td class="text-right"><p>1.386</p></td>
+<td class="text-right"><p>0.902</p></td>
+<td class="text-right"><p>1.242</p></td>
+<td class="text-right"><p>0.472</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>4</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16</p></td>
+<td class="text-right"><p>32</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.213</p></td>
-<td class="text-right"><p>0.678</p></td>
+<td class="text-right"><p>0.178</p></td>
+<td class="text-right"><p>0.683</p></td>
+<td class="text-right"><p>0.487</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>16</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>1.114</p></td>
-<td class="text-right"><p>1.564</p></td>
+<td class="text-right"><p>1.104</p></td>
+<td class="text-right"><p>1.334</p></td>
+<td class="text-right"><p>0.485</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>16</p></td>
 <td class="text-right"><p>67108864</p></td>
@@ -227,63 +232,71 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
 <td class="text-right"><p>0.894</p></td>
-<td class="text-right"><p>1.258</p></td>
+<td class="text-right"><p>1.145</p></td>
+<td class="text-right"><p>0.476</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>16</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.215</p></td>
-<td class="text-right"><p>0.640</p></td>
+<td class="text-right"><p>0.178</p></td>
+<td class="text-right"><p>0.654</p></td>
+<td class="text-right"><p>0.486</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.873</p></td>
-<td class="text-right"><p>0.915</p></td>
+<td class="text-right"><p>0.875</p></td>
+<td class="text-right"><p>0.849</p></td>
+<td class="text-right"><p>0.481</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.767</p></td>
-<td class="text-right"><p>0.823</p></td>
+<td class="text-right"><p>0.723</p></td>
+<td class="text-right"><p>0.777</p></td>
+<td class="text-right"><p>0.482</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>16</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.206</p></td>
-<td class="text-right"><p>0.492</p></td>
+<td class="text-right"><p>0.168</p></td>
+<td class="text-right"><p>0.536</p></td>
+<td class="text-right"><p>0.481</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>64</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.664</p></td>
-<td class="text-right"><p>0.613</p></td>
+<td class="text-right"><p>0.634</p></td>
+<td class="text-right"><p>0.577</p></td>
+<td class="text-right"><p>0.393</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>64</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.593</p></td>
-<td class="text-right"><p>0.560</p></td>
+<td class="text-right"><p>0.555</p></td>
+<td class="text-right"><p>0.545</p></td>
+<td class="text-right"><p>0.365</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>64</p></td>
 <td class="text-right"><p>0</p></td>
-<td class="text-right"><p>0.191</p></td>
-<td class="text-right"><p>0.387</p></td>
+<td class="text-right"><p>0.147</p></td>
+<td class="text-right"><p>0.417</p></td>
+<td class="text-right"><p>0.352</p></td>
 </tr>
 </tbody>
 </table>
@@ -299,88 +312,99 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
 <th class="text-right head"><p>HMEM(GB)</p></th>
 <th class="text-right head"><p>insert</p></th>
 <th class="text-right head"><p>find</p></th>
+<th class="text-right head"><p>erase</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.107</p></td>
-<td class="text-right"><p>0.103</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.067</p></td>
+<td class="text-right"><p>0.064</p></td>
+<td class="text-right"><p>0.454</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.106</p></td>
-<td class="text-right"><p>0.101</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.066</p></td>
+<td class="text-right"><p>0.064</p></td>
+<td class="text-right"><p>0.435</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>134217728</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.077</p></td>
-<td class="text-right"><p>0.094</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.048</p></td>
+<td class="text-right"><p>0.074</p></td>
+<td class="text-right"><p>0.415</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>1073741824</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>56</p></td>
-<td class="text-right"><p>200</p></td>
-<td class="text-right"><p>0.037</p></td>
-<td class="text-right"><p>0.040</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>256</p></td>
+<td class="text-right"><p>0.030</p></td>
+<td class="text-right"><p>0.033</p></td>
+<td class="text-right"><p>0.297</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>1073741824</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>56</p></td>
-<td class="text-right"><p>200</p></td>
-<td class="text-right"><p>0.037</p></td>
-<td class="text-right"><p>0.040</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>256</p></td>
+<td class="text-right"><p>0.030</p></td>
+<td class="text-right"><p>0.032</p></td>
+<td class="text-right"><p>0.294</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
 <td class="text-right"><p>1073741824</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>56</p></td>
-<td class="text-right"><p>200</p></td>
-<td class="text-right"><p>0.030</p></td>
-<td class="text-right"><p>0.036</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>256</p></td>
+<td class="text-right"><p>0.027</p></td>
+<td class="text-right"><p>0.033</p></td>
+<td class="text-right"><p>0.283</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.076</p></td>
-<td class="text-right"><p>0.072</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.043</p></td>
+<td class="text-right"><p>0.043</p></td>
+<td class="text-right"><p>0.563</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.071</p></td>
-<td class="text-right"><p>0.071</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.044</p></td>
+<td class="text-right"><p>0.046</p></td>
+<td class="text-right"><p>0.553</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>67108864</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>16</p></td>
-<td class="text-right"><p>0.059</p></td>
-<td class="text-right"><p>0.068</p></td>
+<td class="text-right"><p>0</p></td>
+<td class="text-right"><p>32</p></td>
+<td class="text-right"><p>0.039</p></td>
+<td class="text-right"><p>0.071</p></td>
+<td class="text-right"><p>0.586</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>536870912</p></td>
 <td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>56</p></td>
 <td class="text-right"><p>200</p></td>
-<td class="text-right"><p>0.039</p></td>
-<td class="text-right"><p>0.040</p></td>
+<td class="text-right"><p>0.041</p></td>
+<td class="text-right"><p>0.041</p></td>
+<td class="text-right"><p>0.313</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>536870912</p></td>
@@ -388,7 +412,8 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
 <td class="text-right"><p>56</p></td>
 <td class="text-right"><p>200</p></td>
 <td class="text-right"><p>0.041</p></td>
-<td class="text-right"><p>0.040</p></td>
+<td class="text-right"><p>0.041</p></td>
+<td class="text-right"><p>0.305</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
 <td class="text-right"><p>536870912</p></td>
@@ -396,7 +421,8 @@ cmake -DCMAKE_BUILD_TYPE<span class="o">=</span>Release -Dsm<span class="o">=</s
 <td class="text-right"><p>56</p></td>
 <td class="text-right"><p>200</p></td>
 <td class="text-right"><p>0.035</p></td>
-<td class="text-right"><p>0.038</p></td>
+<td class="text-right"><p>0.045</p></td>
+<td class="text-right"><p>0.296</p></td>
 </tr>
 </tbody>
 </table>
