Pushing changes to GitHub Pages.

--- a/review/pr-69/genindex.html
+++ b/review/pr-69/genindex.html
@@ -99,7 +99,7 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_6size_tEN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK11vector_typePKbPK9meta_type12cudaStream_tb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignE9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable8capacityEv">nv::merlin::HashTable::capacity (C++ function)</a>
 </li>
@@ -113,17 +113,17 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8erase_ifER4PredRK8key_typeRK9meta_type12cudaStream_t">nv::merlin::HashTable::erase_if (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable15export_batch_ifER4PredRK8key_typeRK9meta_type9size_type9size_typeP9size_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::export_batch_if (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findE9size_typePK8key_typeP10value_typePbP9meta_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findE9size_typePK8key_typeP11vector_typePbP9meta_type12cudaStream_t">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findE9size_typePK8key_typeP10value_typePbP9meta_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9HashTableEv">nv::merlin::HashTable::HashTable (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initEK16HashTableOptions">nv::merlin::HashTable::init (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignE9size_typePK8key_typePK10value_typePK9meta_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignE9size_typePK8key_typePK11vector_typePK9meta_type12cudaStream_tb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignE9size_typePK8key_typePK10value_typePK9meta_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
@@ -141,11 +141,9 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4sizeE12cudaStream_t">nv::merlin::HashTable::size (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9size_typeE">nv::merlin::HashTable::size_type (C++ type)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9this_typeE">nv::merlin::HashTable::this_type (C++ type)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9size_typeE">nv::merlin::HashTable::size_type (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable10value_typeE">nv::merlin::HashTable::value_type (C++ type)</a>
 </li>
