--- a/v0.1.0-beta.1/genindex.html
+++ b/v0.1.0-beta.1/genindex.html
@@ -169,6 +169,8 @@
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions13init_capacityE">nv::merlin::HashTableOptions::init_capacity (C++ member)</a>
 </li>
+      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions13io_block_sizeE">nv::merlin::HashTableOptions::io_block_size (C++ member)</a>
+</li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions9io_by_cpuE">nv::merlin::HashTableOptions::io_by_cpu (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions15max_bucket_sizeE">nv::merlin::HashTableOptions::max_bucket_size (C++ member)</a>
