Pushing changes to GitHub Pages.

--- a/review/pr-69/genindex.html
+++ b/review/pr-69/genindex.html
@@ -97,7 +97,7 @@
 </li>
       <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategy4kLruE">nv::merlin::EvictStrategy::kLru (C++ enumerator)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_6size_tEN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000EN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignEK9size_typePK8key_typePK10value_typePKbPK9meta_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
@@ -105,7 +105,7 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable5clearE12cudaStream_t">nv::merlin::HashTable::clear (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable3DIME">nv::merlin::HashTable::DIM (C++ member)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable3dimEv">nv::merlin::HashTable::dim (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable5emptyE12cudaStream_t">nv::merlin::HashTable::empty (C++ function)</a>
 </li>
@@ -127,35 +127,27 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP10BaseKVFileI1K1V1M3DIMEK9size_type12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP10BaseKVFileI1K1V1MEK6size_t12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable11load_factorE12cudaStream_t">nv::merlin::HashTable::load_factor (C++ function)</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable15max_bucket_sizeEv">nv::merlin::HashTable::max_bucket_size (C++ function)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9meta_typeE">nv::merlin::HashTable::meta_type (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4PredE">nv::merlin::HashTable::Pred (C++ type)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable7reserveEK9size_type12cudaStream_t">nv::merlin::HashTable::reserve (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP10BaseKVFileI1K1V1M3DIMEK9size_type12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4saveEP10BaseKVFileI1K1V1MEK6size_t12cudaStream_t">nv::merlin::HashTable::save (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4sizeE12cudaStream_t">nv::merlin::HashTable::size (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9size_typeE">nv::merlin::HashTable::size_type (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable10value_typeE">nv::merlin::HashTable::value_type (C++ type)</a>
-</li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6VectorE">nv::merlin::HashTable::Vector (C++ struct)</a>, <a href="api/structnv_1_1merlin_1_1HashTable_1_1Vector.html#_CPPv4N2nv6merlin9HashTable6VectorE">[1]</a>
-</li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6Vector3DIME">nv::merlin::HashTable::Vector::DIM (C++ member)</a>, <a href="api/structnv_1_1merlin_1_1HashTable_1_1Vector.html#_CPPv4N2nv6merlin9HashTable6Vector3DIME">[1]</a>
-</li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6Vector10value_typeE">nv::merlin::HashTable::Vector::value_type (C++ type)</a>, <a href="api/structnv_1_1merlin_1_1HashTable_1_1Vector.html#_CPPv4N2nv6merlin9HashTable6Vector10value_typeE">[1]</a>
-</li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6Vector6valuesE">nv::merlin::HashTable::Vector::values (C++ member)</a>, <a href="api/structnv_1_1merlin_1_1HashTable_1_1Vector.html#_CPPv4N2nv6merlin9HashTable6Vector6valuesE">[1]</a>
-</li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable11vector_typeE">nv::merlin::HashTable::vector_type (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTableD0Ev">nv::merlin::HashTable::~HashTable (C++ function)</a>
 </li>
@@ -166,6 +158,8 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions9device_idE">nv::merlin::HashTableOptions::device_id (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions18device_memory_poolE">nv::merlin::HashTableOptions::device_memory_pool (C++ member)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions3dimE">nv::merlin::HashTableOptions::dim (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions14evict_strategyE">nv::merlin::HashTableOptions::evict_strategy (C++ member)</a>
 </li>
@@ -184,6 +178,8 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions19max_hbm_for_vectorsE">nv::merlin::HashTableOptions::max_hbm_for_vectors (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions15max_load_factorE">nv::merlin::HashTableOptions::max_load_factor (C++ member)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions19use_constant_memoryE">nv::merlin::HashTableOptions::use_constant_memory (C++ member)</a>
 </li>
   </ul></td>
 </tr></table>
