--- a/review/pr-90/genindex.html
+++ b/review/pr-90/genindex.html
@@ -127,6 +127,8 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initEK16HashTableOptions">nv::merlin::HashTable::init (C++ function)</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK9meta_typeP8key_typeP10value_typeP9meta_type12cudaStream_t">nv::merlin::HashTable::insert_and_evict (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK9meta_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
