--- a/review/pr-103/README.html
+++ b/review/pr-103/README.html
@@ -184,122 +184,122 @@ cmake<span class="w"> </span>-DCMAKE_BUILD_TYPE<span class="o">=</span>Release<s
 <table class="colwidths-auto docutils align-default">
 <thead>
 <tr class="row-odd"><th class="text-right head"><p>dim</p></th>
-<th class="text-right head"><p>capacity</p></th>
+<th class="text-center head"><p>Capacity<br>(M-KVs)</p></th>
+<th class="text-center head"><p>HBM/HMEM<br>(GB)</p></th>
 <th class="text-right head"><p>load_factor</p></th>
-<th class="text-right head"><p>HBM/HMEM(GB)</p></th>
-<th class="text-right head"><p>insert_or_assign</p></th>
+<th class="text-center head"><p>insert_or_assign</p></th>
 <th class="text-right head"><p>find</p></th>
-<th class="text-right head"><p>find_or_insert</p></th>
+<th class="text-center head"><p>find_or_insert</p></th>
 <th class="text-right head"><p>assign</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>4</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>32 /  0</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>32 /  0</p></td>
-<td class="text-right"><p>1.488</p></td>
-<td class="text-right"><p>2.822</p></td>
-<td class="text-right"><p>1.441</p></td>
-<td class="text-right"><p>1.817</p></td>
+<td class="text-center"><p>1.481</p></td>
+<td class="text-right"><p>2.799</p></td>
+<td class="text-center"><p>1.440</p></td>
+<td class="text-right"><p>1.816</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>4</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>32 /  0</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>32 /  0</p></td>
-<td class="text-right"><p>0.869</p></td>
-<td class="text-right"><p>1.764</p></td>
-<td class="text-right"><p>0.785</p></td>
-<td class="text-right"><p>1.209</p></td>
+<td class="text-center"><p>0.872</p></td>
+<td class="text-right"><p>1.749</p></td>
+<td class="text-center"><p>0.784</p></td>
+<td class="text-right"><p>1.217</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>4</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>32 /  0</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>32 /  0</p></td>
-<td class="text-right"><p>0.190</p></td>
-<td class="text-right"><p>0.670</p></td>
-<td class="text-right"><p>0.267</p></td>
+<td class="text-center"><p>0.190</p></td>
+<td class="text-right"><p>0.671</p></td>
+<td class="text-center"><p>0.267</p></td>
 <td class="text-right"><p>0.248</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>16</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>1.239</p></td>
-<td class="text-right"><p>2.029</p></td>
-<td class="text-right"><p>1.115</p></td>
-<td class="text-right"><p>1.481</p></td>
+<td class="text-center"><p>1.221</p></td>
+<td class="text-right"><p>2.020</p></td>
+<td class="text-center"><p>1.100</p></td>
+<td class="text-right"><p>1.453</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>16</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>0.794</p></td>
-<td class="text-right"><p>1.302</p></td>
-<td class="text-right"><p>0.712</p></td>
-<td class="text-right"><p>0.965</p></td>
+<td class="text-center"><p>0.795</p></td>
+<td class="text-right"><p>1.299</p></td>
+<td class="text-center"><p>0.712</p></td>
+<td class="text-right"><p>0.968</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>16</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>0.190</p></td>
-<td class="text-right"><p>0.646</p></td>
-<td class="text-right"><p>0.266</p></td>
+<td class="text-center"><p>0.190</p></td>
+<td class="text-right"><p>0.647</p></td>
+<td class="text-center"><p>0.266</p></td>
 <td class="text-right"><p>0.247</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>0.688</p></td>
-<td class="text-right"><p>0.925</p></td>
-<td class="text-right"><p>0.696</p></td>
-<td class="text-right"><p>0.735</p></td>
+<td class="text-center"><p>0.685</p></td>
+<td class="text-right"><p>0.922</p></td>
+<td class="text-center"><p>0.694</p></td>
+<td class="text-right"><p>0.736</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>0.575</p></td>
-<td class="text-right"><p>0.682</p></td>
-<td class="text-right"><p>0.517</p></td>
-<td class="text-right"><p>0.557</p></td>
+<td class="text-center"><p>0.573</p></td>
+<td class="text-right"><p>0.683</p></td>
+<td class="text-center"><p>0.517</p></td>
+<td class="text-right"><p>0.554</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 /  0</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16 /  0</p></td>
-<td class="text-right"><p>0.174</p></td>
-<td class="text-right"><p>0.549</p></td>
-<td class="text-right"><p>0.237</p></td>
+<td class="text-center"><p>0.174</p></td>
+<td class="text-right"><p>0.548</p></td>
+<td class="text-center"><p>0.237</p></td>
 <td class="text-right"><p>0.234</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>64 /  0</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>64 /  0</p></td>
-<td class="text-right"><p>0.410</p></td>
-<td class="text-right"><p>0.526</p></td>
-<td class="text-right"><p>0.430</p></td>
+<td class="text-center"><p>0.411</p></td>
+<td class="text-right"><p>0.527</p></td>
+<td class="text-center"><p>0.428</p></td>
 <td class="text-right"><p>0.423</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>64 /  0</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>64 /  0</p></td>
-<td class="text-right"><p>0.387</p></td>
-<td class="text-right"><p>0.412</p></td>
-<td class="text-right"><p>0.362</p></td>
+<td class="text-center"><p>0.388</p></td>
+<td class="text-right"><p>0.413</p></td>
+<td class="text-center"><p>0.363</p></td>
 <td class="text-right"><p>0.345</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>64 /  0</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>64 /  0</p></td>
-<td class="text-right"><p>0.158</p></td>
-<td class="text-right"><p>0.446</p></td>
-<td class="text-right"><p>0.211</p></td>
+<td class="text-center"><p>0.157</p></td>
+<td class="text-right"><p>0.447</p></td>
+<td class="text-center"><p>0.211</p></td>
 <td class="text-right"><p>0.213</p></td>
 </tr>
 </tbody>
@@ -310,122 +310,122 @@ cmake<span class="w"> </span>-DCMAKE_BUILD_TYPE<span class="o">=</span>Release<s
 <table class="colwidths-auto docutils align-default">
 <thead>
 <tr class="row-odd"><th class="text-right head"><p>dim</p></th>
-<th class="text-right head"><p>capacity</p></th>
+<th class="text-center head"><p>Capacity<br>(M-KVs)</p></th>
+<th class="text-center head"><p>HBM/HMEM<br>(GB)</p></th>
 <th class="text-right head"><p>load_factor</p></th>
-<th class="text-right head"><p>HBM/HMEM(GB)</p></th>
-<th class="text-right head"><p>insert_or_assign</p></th>
+<th class="text-center head"><p>insert_or_assign</p></th>
 <th class="text-right head"><p>find</p></th>
-<th class="text-right head"><p>find_or_insert</p></th>
+<th class="text-center head"><p>find_or_insert</p></th>
 <th class="text-right head"><p>assign</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.086</p></td>
+<td class="text-center"><p>0.086</p></td>
 <td class="text-right"><p>0.082</p></td>
-<td class="text-right"><p>0.119</p></td>
+<td class="text-center"><p>0.119</p></td>
 <td class="text-right"><p>0.086</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.083</p></td>
-<td class="text-right"><p>0.076</p></td>
-<td class="text-right"><p>0.113</p></td>
+<td class="text-center"><p>0.083</p></td>
+<td class="text-right"><p>0.081</p></td>
+<td class="text-center"><p>0.113</p></td>
 <td class="text-right"><p>0.085</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>134217728</p></td>
+<td class="text-center"><p>128</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.063</p></td>
+<td class="text-center"><p>0.064</p></td>
 <td class="text-right"><p>0.076</p></td>
-<td class="text-right"><p>0.072</p></td>
+<td class="text-center"><p>0.072</p></td>
 <td class="text-right"><p>0.052</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>1073741824</p></td>
+<td class="text-center"><p>1024</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.039</p></td>
+<td class="text-center"><p>0.038</p></td>
 <td class="text-right"><p>0.042</p></td>
-<td class="text-right"><p>0.033</p></td>
+<td class="text-center"><p>0.034</p></td>
 <td class="text-right"><p>0.039</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>1073741824</p></td>
+<td class="text-center"><p>1024</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.038</p></td>
+<td class="text-center"><p>0.038</p></td>
 <td class="text-right"><p>0.042</p></td>
-<td class="text-right"><p>0.034</p></td>
+<td class="text-center"><p>0.034</p></td>
 <td class="text-right"><p>0.038</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>64</p></td>
-<td class="text-right"><p>1073741824</p></td>
+<td class="text-center"><p>1024</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.033</p></td>
+<td class="text-center"><p>0.033</p></td>
 <td class="text-right"><p>0.041</p></td>
-<td class="text-right"><p>0.029</p></td>
+<td class="text-center"><p>0.029</p></td>
 <td class="text-right"><p>0.030</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.045</p></td>
+<td class="text-center"><p>0.045</p></td>
 <td class="text-right"><p>0.042</p></td>
-<td class="text-right"><p>0.064</p></td>
+<td class="text-center"><p>0.064</p></td>
 <td class="text-right"><p>0.045</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.044</p></td>
+<td class="text-center"><p>0.044</p></td>
 <td class="text-right"><p>0.042</p></td>
-<td class="text-right"><p>0.062</p></td>
-<td class="text-right"><p>0.044</p></td>
+<td class="text-center"><p>0.062</p></td>
+<td class="text-right"><p>0.042</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>67108864</p></td>
+<td class="text-center"><p>64</p></td>
+<td class="text-center"><p>16 / 16</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>16 / 16</p></td>
-<td class="text-right"><p>0.038</p></td>
+<td class="text-center"><p>0.038</p></td>
 <td class="text-right"><p>0.041</p></td>
-<td class="text-right"><p>0.048</p></td>
+<td class="text-center"><p>0.048</p></td>
 <td class="text-right"><p>0.034</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>536870912</p></td>
+<td class="text-center"><p>512</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>0.50</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.029</p></td>
+<td class="text-center"><p>0.029</p></td>
 <td class="text-right"><p>0.028</p></td>
-<td class="text-right"><p>0.042</p></td>
+<td class="text-center"><p>0.042</p></td>
 <td class="text-right"><p>0.029</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>536870912</p></td>
+<td class="text-center"><p>512</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>0.75</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.029</p></td>
+<td class="text-center"><p>0.029</p></td>
 <td class="text-right"><p>0.028</p></td>
-<td class="text-right"><p>0.042</p></td>
+<td class="text-center"><p>0.041</p></td>
 <td class="text-right"><p>0.029</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>128</p></td>
-<td class="text-right"><p>536870912</p></td>
+<td class="text-center"><p>512</p></td>
+<td class="text-center"><p>56 /200</p></td>
 <td class="text-right"><p>1.00</p></td>
-<td class="text-right"><p>56 /200</p></td>
-<td class="text-right"><p>0.026</p></td>
+<td class="text-center"><p>0.026</p></td>
 <td class="text-right"><p>0.027</p></td>
-<td class="text-right"><p>0.034</p></td>
+<td class="text-center"><p>0.034</p></td>
 <td class="text-right"><p>0.024</p></td>
 </tr>
 </tbody>
